# minitracer

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  m.stl  main.c  minitracer  minitracer.c  minitracer.h  monkey.stl  run.sh  to-do.txt
examples/: balls.c  cornell_box.c  crazy.c  fixed_renderer.c  infinite.c  mirror_room.c  random_cubes.c  suzanne.c  test.c
examples/models/: suzanne.stl
examples/raylib_utils/: common.h  input.c  input.h  instance.c  instance.h  render.c  render.h
src/: camera.c  camera.h  hit.c  hit.h  image.h  main.c  material.c  material.h  math_utils.c  math_utils.h  mesh.c  mesh.h  object.c  object.h  random.c  random.h  ray.c  ray.h  render.c  render.h  vec.c  vec.h  world.c  world.h
